# llm-fusion

./: .gitignore  README.md  SKILL.md  install.sh  pyproject.toml
scripts/: __init__.py  __main__.py  classifier.py  cleaner.py  cli.py  config.py  judge.py  panel.py  pipeline.py  skill_handler.py
skills/llm-fusion/: SKILL.md
skills/llm-fusion/assets/: fusion_config.yaml  fusion_config.yaml.example
skills/llm-fusion/scripts/: __init__.py  api_client.py  classifier.py  cli.py  config.py  fallback.py  judge.py  output.py  panel.py  pipeline.py  skill_handler.py
src/llm_fusion/: __main__.py  api_client.py  classifier.py  cleaner.py  cli.py  config.py  fallback.py  judge.py  output.py  panel.py  pipeline.py  skill_handler.py
tests/: conftest.py  test_cli.py  test_config_discovery.py  test_fusion.py  test_packaging.py  test_skill_bundle.py  test_tiers.py
